--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           transition: all 450ms ease-in-out;
           margin: 20px auto; 
           text-decoration: none; 
-          animation: fadeIn 2s ease-out; /*Fade-in effect*/
+          animation: fadeIn 2s ease-out;/*Fade-in effect*/
         }
 
         .sparkle {
@@ -108,13 +108,13 @@
         .care-options {
             display: flex;
             justify-content: space-around;
-            gap: 20px; /*Added gap between the items*/
-            margin-top: 40px; /*Increased space above this section*/
+            gap: 20px;
+            margin-top: 40px;
             margin-bottom: 30px;
             background-color: #f4f4f4;
             padding: 20px;
             border-radius: 15px;
-            animation: fadeIn 2.5s ease-out; /*Fade-in effect*/
+            animation: fadeIn 2.5s ease-out;/*Fade-in effect*/
         }
 
         .care-option {
@@ -126,11 +126,11 @@
             text-align: left;
             font-size: 14px;
             color: #333;
-            transition: transform 0.3s ease; /*Hover effect again*/
+            transition: transform 0.3s ease;/*Hover effect again*/
         }
 
         .care-option:hover {
-            transform: translateY(-5px); /*Hover lift effect*/
+            transform: translateY(-5px);
         }
 
         .note-container {
