changed logo names

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 <div class="container">
     <div class="logo-container">
-        <img src="./Pictures/logo.png" alt="SwiftER Logo">
+        <img src="./Pictures/heartSymbol.png" alt="SwiftER Logo">
         <h1>SwiftER</h1>
     </div>
     
